objects/Milestone_Code__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Revenue Account Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Description__c</fullName>
        <label>Account Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outsourced Assessment Revenue</fullName>
                </value>
                <value>
                    <fullName>Solutions Consulting Revenue</fullName>
                </value>
                <value>
                    <fullName>Product Consulting Revenue</fullName>
                </value>
                <value>
                    <fullName>Training Revenue - Psychometric</fullName>
                </value>
                <value>
                    <fullName>Training Revenue - Non-Psychometric</fullName>
                </value>
                <value>
                    <fullName>Other Assessment Intra SHL Purchases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evidence__c</fullName>
        <label>Evidence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation stored on server</fullName>
                </value>
                <value>
                    <fullName>Sign off doc candidate</fullName>
                </value>
                <value>
                    <fullName>Report to client stored on server</fullName>
                </value>
                <value>
                    <fullName>Sign off doc Assessor</fullName>
                </value>
                <value>
                    <fullName>Collected data</fullName>
                </value>
                <value>
                    <fullName>Signed off doc client</fullName>
                </value>
                <value>
                    <fullName>Contend send to client</fullName>
                </value>
                <value>
                    <fullName>Sign off doc client</fullName>
                </value>
                <value>
                    <fullName>Content send to client</fullName>
                </value>
                <value>
                    <fullName>PPT to client</fullName>
                </value>
                <value>
                    <fullName>Data stored in client folder on server</fullName>
                </value>
                <value>
                    <fullName>PPT and date PPT at client site</fullName>
                </value>
                <value>
                    <fullName>Attendee list</fullName>
                </value>
                <value>
                    <fullName>Sign off doc Sales LBU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM_code__c</fullName>
        <label>IM code</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_lookup__c</fullName>
        <label>IM lookup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>A set of Milestone values to be selected.</description>
        <label>Milestone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Exercise Design</fullName>
                </value>
                <value>
                    <fullName>Delivery of Assessment</fullName>
                </value>
                <value>
                    <fullName>Outcome Design</fullName>
                </value>
                <value>
                    <fullName>Content Creation and data collection</fullName>
                </value>
                <value>
                    <fullName>Report and Feedback</fullName>
                </value>
                <value>
                    <fullName>Assessor Training</fullName>
                </value>
                <value>
                    <fullName>Delivery, Report and Feedback</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Feedback Session</fullName>
                </value>
                <value>
                    <fullName>Workshop Design</fullName>
                </value>
                <value>
                    <fullName>Workshop Delivery</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Recommendations Report</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Competency Framework</fullName>
                </value>
                <value>
                    <fullName>Content Creation</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content (incl localisation)</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off IT Build</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Script</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Mock-up</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Mappings</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Equations, Norms and Rulebase</fullName>
                </value>
                <value>
                    <fullName>Data Audit</fullName>
                </value>
                <value>
                    <fullName>Presentation to Client</fullName>
                </value>
                <value>
                    <fullName>Unit Exchange for Consulting</fullName>
                </value>
                <value>
                    <fullName>Unit Exchange for Training</fullName>
                </value>
                <value>
                    <fullName>Intra SHL Purchase of Services</fullName>
                </value>
                <value>
                    <fullName>Initial Data Collection</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Draft Content</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content Build</fullName>
                </value>
                <value>
                    <fullName>Complete Data Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1:1 Assessment</fullName>
                </value>
                <value>
                    <fullName>1:1 Development</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Development Centre</fullName>
                </value>
                <value>
                    <fullName>Individual Development Feedback Session</fullName>
                </value>
                <value>
                    <fullName>Team Development Feedback Session</fullName>
                </value>
                <value>
                    <fullName>Competency Design</fullName>
                </value>
                <value>
                    <fullName>Competency Profiling / Review</fullName>
                </value>
                <value>
                    <fullName>Talent Screener (+ 1 language)</fullName>
                </value>
                <value>
                    <fullName>Talent Screener MM/Video (+1 language)</fullName>
                </value>
                <value>
                    <fullName>RJP</fullName>
                </value>
                <value>
                    <fullName>Custom Report (UCR)</fullName>
                </value>
                <value>
                    <fullName>Custom Report (Client Competencies)</fullName>
                </value>
                <value>
                    <fullName>Business Outcome Study</fullName>
                </value>
                <value>
                    <fullName>Unit Exchange</fullName>
                </value>
                <value>
                    <fullName>Intra SHL Purchase of Services</fullName>
                </value>
                <value>
                    <fullName>Other Custom Content Development</fullName>
                </value>
                <value>
                    <fullName>Job Analysis - Stand Alone (PC)</fullName>
                </value>
                <value>
                    <fullName>Job Profiling</fullName>
                </value>
                <value>
                    <fullName>Talent Analytics</fullName>
                </value>
                <value>
                    <fullName>Bespoke Psychometric Training</fullName>
                </value>
                <value>
                    <fullName>Bespoke Non-Psychometric Training</fullName>
                </value>
                <value>
                    <fullName>Project Management (Solutions Consulting)</fullName>
                </value>
                <value>
                    <fullName>Project Management (Product Consulting)</fullName>
                </value>
                <value>
                    <fullName>Project Management (Assessment Services)</fullName>
                </value>
                <value>
                    <fullName>PST_3rd Party Integration</fullName>
                </value>
                <value>
                    <fullName>PST_360 Solution</fullName>
                </value>
                <value>
                    <fullName>PST_Talent Audit</fullName>
                </value>
                <value>
                    <fullName>PST_Custom Norm</fullName>
                </value>
                <value>
                    <fullName>PST_Branded Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone Code</label>
    <listViews>
        <fullName>All_Codes</fullName>
        <columns>NAME</columns>
        <columns>Service_Type__c</columns>
        <columns>Milestone__c</columns>
        <columns>IM_code__c</columns>
        <columns>IM_lookup__c</columns>
        <columns>Account_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Codes</label>
    </listViews>
    <listViews>
        <fullName>IT_Build_codes</fullName>
        <columns>NAME</columns>
        <columns>Account_Code__c</columns>
        <columns>IM_lookup__c</columns>
        <columns>IM_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>IT build</value>
        </filters>
        <label>IT Build codes</label>
    </listViews>
    <nameField>
        <label>Milestone Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>